--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: tableOne
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Generates a Simple Table One with Stratification by 2 groups.
 Version: 0.1.0
 Author: Lacey Etzkorn, PhD
 Maintainer: Lacey Etzkorn <letzkor1@jh.edu>
-Description: Creates a table one which compares all characterisitcs in a data frame between multiple strata.
+Description: Creates a table one which compares all characterisitcs in a data frame between two strata.
 License: LGPL
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
